services/traefik/04_service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
